[package]
name = "kill-port"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kp"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.1"
owo-colors = "3.5.0"
regex = "1.8.1"
