[package]
name = "kill-port"
version = "0.1.20"
edition = "2021"

[[bin]]
name = "kp"
path = "src/main.rs"

[profile.release]
lto = true
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owo-colors = "4.0.0"
regex = "1.10.2"
